# avento

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  mcp_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_password_reset_tokens.py  0003_profile_coaching.py  0004_activity_insights.py  0005_mcp_server.py  0006_mcp_oauth.py  0007_gamification.py  0008_authentication_factors.py  0009_google_health.py  0010_minimal_ui_mode.py  0011_activity_geography.py  0012_activity_photo_originals.py  0013_import_jobs.py  0014_activity_quality.py  0015_saved_segments.py
backend/app/: __init__.py  activity_formats.py  activity_geography.py  ai.py  analysis.py  config.py  data_quality.py  database.py  deps.py  gamification.py  gamification_ai.py  geography.py  google_health_client.py  health_aggregation.py  health_models.py  health_schemas.py  health_scores.py  health_sync.py  main.py  mcp_models.py  mcp_oauth.py  mcp_security.py  mcp_service.py  models.py  passkeys.py  photo_storage.py  route_segments.py  schemas.py  security.py  statistics.py  tcx.py  weather.py  weather_classification.py
backend/app/routers/: __init__.py  (+9 more)
backend/tests/: conftest.py  test_activities.py  test_activity_insights.py  test_auth.py  test_coaching_features.py  test_gamification.py  test_gamification_ai.py  test_geography.py  test_google_health.py  test_health_scores.py  test_mcp.py  test_mcp_oauth.py  test_migrations.py  test_tcx.py  test_weather_classification.py
(+204 files in other folders)
