[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "avento-backend"
version = "0.1.0"
description = "Avento cycling analysis API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "argon2-cffi>=23.1,<26",
  "cryptography>=46,<47",
  "defusedxml>=0.7,<1",
  "fitparse>=1.2,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openai>=1.68,<3",
  "pillow>=11.2,<13",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "PyJWT>=2.9,<3",
  "webauthn>=2.8,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
